# util

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  util.h
cmake/: thirdparty.cmake
cmdoptions/: CMakeLists.txt  CommandOptions.h  CommmandOptions.h
cmdoptions/detail/: CommandOptions.cpp  CommmandOptions.cpp
cmdoptions/unittest/: CMakeLists.txt  main.cpp
common/: Colors.h
common/design/: Copyable.h
common/design/singleton/: Singleton.h
common/design/singleton/unittest/: main  main.cpp
common/logger/: Logger.h
common/memory/: Alloc.h
common/memory/unittest/: main.cpp
common/tools/: Timer.h
term_print/: thread.h
term_print/detail/: TermPrint.cpp
thread/: thread.h
